# qrex

./: .gitignore  Dockerfile.dev  LICENSE  README.md  mix.exs
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
lib/: qrex.ex
native/qrex/: Cargo.toml
native/qrex/src/: lib.rs
native/qrex/src/decoders/: bardecoder.rs  mod.rs  rrqr.rs  rxing.rs
